--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -9,10 +9,10 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("https://img.freepik.com/premium-photo/watch-with-dumbbells-barbell-mat-sports-3d-rendering-illustration-retro-wave-style_499459-574.jpg");
+  background-image: url("../../assets/bg-4.png");
   background-size: cover;
   background-position: center;
-  filter: brightness(0.7);
+  filter: brightness(0.9) hue-rotate(60deg);
   z-index: -1;
 }
 
@@ -22,10 +22,10 @@
   align-items: flex-start;
   justify-content: center;
   width: 90%;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(240, 255, 240, 0.9);
   padding: 40px;
   border-radius: 10px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 20px rgba(0, 100, 0, 0.1);
   position: relative;
   z-index: 1;
 }
@@ -49,24 +49,24 @@
 .about h3 {
   font-weight: 600;
   font-size: 16px;
-  color: #212ea0;
+  color: #2e8b57;
   margin-top: 30px;
 }
 
 .about h2 {
   font-size: 35px;
-  color: #000f38;
+  color: #006400;
   margin: 10px 0;
   max-width: 400px;
 }
 
 .about p {
-  color: #676767;
+  color: #3c3c3c;
   margin-bottom: 15px;
 }
 
 .about ul {
-  color: #676767;
+  color: #3c3c3c;
   margin-left: 20px;
   margin-bottom: 15px;
 }
