--- a/src/Components/Title/Title.css
+++ b/src/Components/Title/Title.css
@@ -1,7 +1,7 @@
 .title{
     
     text-align: center;
-    color: #212ea0;
+    color: #3fdd64;
     font-size: 15px;
     font-weight: 600;
     text-transform: uppercase;
@@ -13,7 +13,7 @@
 }
 .title h2{
     font-size: 32px;
-    color: #000f38;
+    color: #003816;
     margin-top: 5px;
     text-transform: none;
 }
