--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -1,7 +1,6 @@
-.hero {
+/* .hero {
   width: 100%;
   min-height: 100vh;
-  /* background: linear-gradient(rgba(8, 0, 58, 0.7), rgba(8, 0, 58, 0.7)), */
   background: linear-gradient(
       rgba(144, 238, 144, 0.527),
       rgba(144, 238, 144, 0.299)
@@ -41,10 +40,10 @@
 
 /*------- media query -------*/
 
-@media (max-width: 850px) {
+/* @media (max-width: 850px) {
   .hero {
     background-position: right;
-    background-position-x:80% ;
+    background-position-x: 80%;
   }
   .hero-text h1 {
     font-size: 40px;
@@ -61,4 +60,4 @@
     font-size: 14px;
     margin: 15px auto 30px;
   }
-}
+}  */
